# healtharchive-backend

./: .env.example  .gitignore  .mailmap  .pre-commit-config.yaml  404.html  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  ENVIRONMENTS.md  Makefile  README.md  SECURITY.md  VPS-DEPLOYMENT-INSTRUCTIONS.md  hosting-and-live-server-to-dos.md  index.html  llms.txt  mkdocs.yml  openapi.json  pyproject.toml  requirements.txt  sitemap.xml
.claude/: settings.local.json
.github/: CODEOWNERS  dependabot.yml  migration-guard-exceptions.txt  pull_request_template.md
_templates/: index.html
alembic/: env.py
api/: index.html
api-consumer-guide/: index.html
architecture/: index.html
contributing/: index.html
datasets-external/: index.html
decisions/: index.html
deployment/: index.html  prometheus-alerts-crawl.yml
development/: index.html
docs/: README.md  api-consumer-guide.md  api.md  architecture.md  contributing.md  documentation-guidelines.md  documentation-process-audit.md  documentation.md  environment-matrix.md  live-testing.md  monitoring-and-ci-checklist.md  production-rollout-checklist.md  project.md  quickstart.md  roadmap-process.md  staging-rollout-checklist.md
documentation-guidelines/: index.html
documentation-process-audit/: index.html
frontend-external/: index.html
operations/: index.html
planning/: index.html
project/: index.html
quickstart/: index.html
roadmap-process/: index.html
roadmaps/: index.html
scripts/: annual-search-verify.sh  baseline_snapshot.py  campaign_storage_forecast.py  capture-baseline-inventory.sh  check_baseline_drift.py  check_docs_coverage.py  check_docs_references.py  ci-api-health-local.sh  ci-e2e-seed.py  ci-e2e-smoke.sh  ci_migration_guard.py  export_openapi.py  generate_llms_txt.py  generate_replay_preview.js  import-legacy-crawl.sh  install-pre-push-hook.sh  run_archive.py  search-eval-capture.sh  search-eval-diff.py  search-eval-generate-queries.py  search-eval-queries.txt  search-eval-run.sh  smoke-external-monitors.sh  systemd-healthchecks-wrapper.sh  verify-security-and-admin.sh  verify_healthchecks_alignment.py  verify_ops_automation.sh  verify_phase5_7.py  verify_public_surface.py  vps-alert-pipeline-drill.sh  vps-annual-campaign-sentinel.py  vps-annual-output-tiering.py  vps-bootstrap-observability-scaffold.sh  vps-bootstrap-ops-dirs.sh  vps-capture-hotpath-staleness-evidence.sh  vps-cleanup-automation.py  vps-coverage-guardrails-textfile.py  vps-crawl-auto-recover.py  vps-crawl-metrics-textfile.py  vps-crawl-status.sh  (+39 more)
search/: search_index.json
tests/: conftest.py  test_active_docs_current_state.py  test_admin_search_debug.py  test_api_admin_and_metrics.py  test_api_changes.py  test_api_compare_live.py  test_api_contracts.py  test_api_exports.py  test_api_health_and_sources.py  test_api_reports.py  test_api_search_and_snapshot.py  test_api_snapshot_latest.py  test_api_usage_metrics.py  test_archive_contract.py  test_changes.py  (+78 more)
(+650 files in other folders)
