# pyproject.toml
[project]
name = "healtharchive-backend"
version = "0.0.1"
description = "Backend services and archiving pipeline for HealthArchive.ca"
authors = [
  { name = "Jeremy Dawson" }
]
requires-python = ">=3.11"
dependencies = [
  # core runtime deps go here as we add them
]

[project.scripts]
archive-tool = "archive_tool.main:main"
ha-backend = "ha_backend.cli:main"

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "mypy",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

