# pyproject.toml
[project]
name = "healtharchive-backend"
version = "0.0.1"
description = "Backend services and archiving pipeline for HealthArchive.ca"
authors = [
  { name = "Jeremy Dawson" }
]
requires-python = ">=3.11"
dependencies = [
  # Core runtime deps
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "warcio>=1.7",
  "beautifulsoup4>=4.12",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
]

[project.scripts]
archive-tool = "archive_tool.main:main"
ha-backend = "ha_backend.cli:main"

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "mypy",
  "pytest",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
