# pyproject.toml
[project]
name = "healtharchive-backend"
version = "0.0.1"
description = "Backend services and archiving pipeline for HealthArchive.ca"
authors = [
  { name = "Jeremy Dawson" }
]
requires-python = ">=3.11"
dependencies = [
  # Core runtime deps
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "warcio>=1.7",
  "beautifulsoup4>=4.12",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
]

[project.scripts]
archive-tool = "archive_tool.main:main"
ha-backend = "ha_backend.cli:main"

[project.optional-dependencies]
dev = [
  "ruff==0.15.0",
  "mypy",
  "pytest",
  "pytest-cov",
  "bandit",
  "pip-audit",
  "pre-commit",
  "mkdocs-material[imaging]",
  "mkdocs-minify-plugin",
  "mkdocs-monorepo-plugin",
  "mkdocs-swagger-ui-tag",
  "cairosvg",
  "pillow",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E402"]  # Module level import not at top of file (allow docstrings after __future__)

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
ignore_missing_imports = true
